fix overflow

--- a/Snippets/BetterProfiles/import.css
+++ b/Snippets/BetterProfiles/import.css
@@ -21,6 +21,8 @@
 	padding: 0.25em 0.375em;
 	margin: 0.25em 0 0 0;
 	border-radius: 0.5rem;
+	max-width: 90%;
+	overflow: hidden;
 	background: linear-gradient(var(--profile-gradient-primary-color),var(--profile-gradient-primary-color) 60px,var(--profile-gradient-secondary-color))
 }
 .scroller-15bIdk {
